# vol_bot_ml

./: .gitignore  LLM_PROJECT_SUMMARY.md  PROJELER_DOKUMAN.md  README.md  check_positions.py  deploy.sh  deploy_auto.sh  deploy_expect.sh  deploy_setup.sh  eigen_ema_multi_trader.py  eigen_ema_readme.md  emergency_close.py  env.example  nasdaq_strategy.pine  order_client.py  pengu_ema_multi_config.json  pengu_ema_multi_trader.py  pyproject.toml  requirements.txt  smoke_test.py
AVAX_ATR_2H/: .gitignore  SERVER_SETUP_COMMANDS.sh  deploy_to_server.sh  requirements.txt
BTC/: FEATURES_COMPLETE.md  PROJE_HAZIR.md  README.md  TEST_RESULTS.md  TEST_RESULTS_ADVANCED.md  test_advanced_features.py
ENA_ATR/: README.md  SERVER_SETUP_COMMANDS.sh  SIGNAL_TIMING_FIX.md  deploy_to_server.sh  test_14_30_detailed.py  test_15_00_to_15_30.py  test_15_30_with_atr11.py  test_16_00_bar.py  test_16_00_crossover.py  test_16_00_detailed.py  test_tradingview_comparison.py
ETH/: FEATURES_COMPLETE.md  README.md  SHADOW_MODE_DISABLED.md  pyproject.toml  test_advanced_features.py  test_new_features.py
ETH/configs/: llm_config.json  train_3m.json
ETH/scripts/: run_live_continuous.py
ETH/src/: live_loop.py  order_client.py  slippage.py
ETH/tests/: test_model_forward.py
FET_ATR_2H/: README.md  SERVER_SETUP_COMMANDS.sh  deploy_to_server.sh
LLM/: ALL_SERVICES_OPTIMIZATION.md  ANALYSIS_SCRIPTS_USAGE.md  EXPECTED_SIGNAL_ANALYSIS.md  ISSUES_FOUND.md  LLM_ENTRY_STRATEGY.pine  LLM_ENTRY_STRATEGY_EXPLANATION.md  LLM_SERVICE_STOPPED.md  LLM_STATUS_REPORT.md  README.md  REMAINING_TASKS.md  RETRAINING_STATUS.md  SERVER_ALL_SERVICES_STATUS.md  SERVICES_OPTIMIZATION_SUMMARY.md  SIGNAL_ANALYSIS.md  (+2 more)
(+610 files in other folders)
