[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atr-st-optimizer"
version = "1.0.0"
description = "ATR + SuperTrend Strategy Optimizer with ccxt data integration"
authors = [{name = "Quant Developer", email = "dev@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "numba>=0.57.0",
    "optuna>=3.0.0",
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "pytest>=7.0.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
    "pyarrow>=12.0.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.scripts]
atr-optimizer = "atr_st_optimizer.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["atr_st_optimizer*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
